2013-02-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* marker.c (set_marker_internal): If desired position is passed
	as a marker, avoid call to buf_charpos_to_bytepos.
	* window.c (Fset_window_point): Omit redundant type checking.
	(Fset_window_start): Likewise.  Format comment.
	(window_scroll_pixel_based): Use set_marker_restricted_both
	with character and byte positions obtained from an iterator.
	(Fset_window_configuration): Use set_marker_restricted_both.
	* xdisp.c (message_dolog): Likewise.

2013-02-10  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_vertically_backward, move_it_by_lines): When
	text lines are longer than window's screen lines, don't move back
	too far.  This speeds up some redisplay operations.  (Bug#13675)

2013-02-10  Dmitry Antipov  <dmantipov@yandex.ru>

	* syntax.c (scan_sexps_forward): Fix byte position calculation
	Bug#13664 (a.k.a Bug#13667) introduced with 2013-02-08 change.

2013-02-10  Paul Eggert  <eggert@cs.ucla.edu>

	* fileio.c (Fexpand_file_name): Omit confusing pointer comparison
	that was not needed.

2013-02-09  Paul Eggert  <eggert@cs.ucla.edu>

	Minor hashing refactoring.
	* fns.c (SXHASH_REDUCE): Move to lisp.h.
	(sxhash_float): Return EMACS_UINT, for consistency with the other
	hash functions.
	* lisp.h (INTMASK): Now a macro, since SXHASH_REDUCE is now a
	non-static inline function and therefore can't use static vars.
	(SXHASH_REDUCE): Move here from fns.c, and make it inline.
	* profiler.c (hashfn_profiler): Use SXHASH_REDUCE, to be consistent
	with the other hash functions.

2013-02-09  Eli Zaretskii  <eliz@gnu.org>

	* callproc.c (Fcall_process_region) [WINDOWSNT]: Make sure the
	XXXXXX part of the temporary file pattern is not downcased even
	when w32-downcase-file-names is non-nil.  (Bug#13661)

	* xdisp.c (decode_mode_spec): Remove handling of %t.

	* msdos.c (careadlinkatcwd): Remove.

2013-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (skip_dyn_bytes): New function (bug#12598).